# xbox_image_service

./: Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml
app/: main.py  tasks.py  worker.py
app/core/: config.py
app/schemas/: __init__.py  images_schema.py
